# keyring-subprocess

./: LICENSE.txt  README.md  keyring-subprocess.pth  noxfile.py  pyproject.toml
scripts/: CentralDirectoryHeader.py  EndOfCentralDirectoryRecord.py  LocalFileHeader.py  quine.py
src/keyring_subprocess/: __init__.py
src/keyring_subprocess/_internal/: __init__.py  _loader.py  _seeder.py  loader.py
src/keyring_subprocess/_internal/wheels/: keyring_subprocess-0.6.0-py3-none-any.whl  keyring_subprocess-0.9.0-py3-none-any.whl
src/keyring_subprocess/_internal/wheels/keyring_subprocess-0.9.0-py3-none-any.whl/keyring_subprocess/: __init__.py
src/keyring_subprocess/_internal/wheels/keyring_subprocess-0.9.0-py3-none-any.whl/keyring_subprocess/_internal/wheels/: keyring_subprocess-0.8.0-py3-none-any.whl
src/keyring_subprocess/_internal/wheels/keyring_subprocess-0.9.0-py3-none-any.whl/keyring_subprocess/backend/: _subprocess.py
src/keyring_subprocess/_vendor/: vendor.txt  zipp.pyi
src/keyring_subprocess/backend/: __init__.py  _subprocess.py  subprocess.py
tests/manual/: test_keyring.py  test_keyring_subprocess.py
