[tool.poetry]
name = "keyring-subprocess"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Dos Moonen <darsstar@gmail.com>"]
readme = "README.md"
packages = [{include = "keyring_subprocess", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
