[tool.poetry]
name = "keyring-subprocess"
version = "0.2.0"
description = ""
license = "MIT"
authors = ["Dos Moonen <darsstar@gmail.com>"]
readme = "README.md"
packages = [{include = "keyring_subprocess", from = "src"}]
include = ["keyring-subprocess.pth"]

[tool.poetry.plugins."keyring.backends"]
keyring-subprocess = "keyring_subprocess.backend:SubprocessBackend"

[tool.poetry.plugins."virtualenv.seed"]
keyring-subprocess = "keyring_subprocess._internal:KeyringSubprocessFromAppData"


[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.vendoring]
destination = "src/keyring_subprocess/_vendor/"
requirements = "src/keyring_subprocess/_vendor/vendor.txt"
namespace = ""

protected-files = ["__init__.py", "README.rst", "vendor.txt"]

[tool.vendoring.transformations]
drop = [
  # contains unnecessary scripts
  "bin/",
  "zipp.pyi",
]

[tool.vendoring.typing-stubs]
six = []
distro = []

[tool.vendoring.license.directories]

[tool.vendoring.license.fallback-urls]
